tests/neg-custom-args/captures/wf-reach-1.check
-- Error: tests/neg-custom-args/captures/wf-reach-1.scala:2:17 ---------------------------------------------------------
2 |  val y: Object^{x*} = ??? // error
  |                 ^^
  |                 x* cannot be tracked since its deep capture set is empty
