tests/neg-custom-args/captures/wf-reach-1.scala
def test(x: List[() -> Unit]) =
  val y: Object^{x*} = ??? // error
